--- a/css/index.css
+++ b/css/index.css
@@ -3,11 +3,32 @@ section {
   height: 100vh;
 }
 
+/* banner section */
+#banner-section .video-cover {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background: url("../assets/img/wows_screen_subm-min.jpg") no-repeat center;
+  background-size: cover;
+  cursor: pointer;
+}
+
+#banner-section .video {
+  height: 100%;
+}
+
 /* intro section */
 #intro-section .main-text {
   position: absolute;
   top: 110px;
   left: 70px;
+}
+
+.main-text h2 {
+  transform: translateX(calc(-100% - 220px));
 }
 
 #intro-section .main-text h2:nth-of-type(2) {
@@ -18,8 +39,120 @@ section {
   margin-top: 15px;
 }
 
-h2.animation-slide-leftright {
+.main-text.animation-slide-leftright h2 {
+  transform: translateX(0);
 }
 
-h2.animation-slide-leftright {
+.main-text.animation-slide-leftright h2:nth-of-type(1) {
+  transition: transform 0.5s ease-in-out;
+}
+
+.main-text.animation-slide-leftright h2:nth-of-type(2) {
+  transition: transform 1.4s ease-in-out;
+}
+
+#intro-section .sub-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.sub-text p {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.sub-text p + p {
+  margin-top: 30px;
+}
+
+.sub-text.fadeIn p {
+  opacity: 1;
+  visibility: visible;
+}
+
+.sub-text p:nth-of-type(1) {
+  transition: opacity 3.5s ease-in-out;
+}
+
+.sub-text p:nth-of-type(2) {
+  transition: opacity 4.5s ease-in-out;
+}
+
+#searching-section {
+  padding-top: 110px;
+}
+
+#searching-section .section-title {
+  text-align: center;
+}
+
+#searching-section .search-bar {
+  width: 500px;
+  margin: 0 auto;
+  margin-top: 133px;
+  background-color: #102031;
+  overflow: hidden;
+  border-radius: 30px;
+}
+
+.search-bar .search-list {
+  padding: 20px 20px;
+}
+
+.search-bar .search-list li {
+  display: flex;
+  align-items: center;
+  line-height: 1;
+  vertical-align: middle;
+  font-size: 36px;
+  cursor: pointer;
+}
+
+.search-bar .search-list li:hover {
+  background-color: #08111a;
+}
+
+.search-bar .search-list li::before {
+  content: "";
+  display: inline-block;
+  margin-right: 25px;
+  width: 40px;
+  height: 40px;
+  background: url("../assets/img/search_icon.svg") no-repeat center;
+}
+
+.search-bar .search-list li + li {
+  margin-top: 15px;
+}
+
+.search {
+  position: relative;
+}
+
+.search input {
+  padding: 0 60px;
+  width: 100%;
+  height: 60px;
+  background-color: transparent;
+  color: #d7d7d7;
+  border: none;
+  font-size: 36px;
+}
+
+.search #searching {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 40px;
+  height: 40px;
+  background: url("../assets/img/search_icon.svg") no-repeat center;
+  cursor: pointer;
+  text-indent: -9999px;
+}
+
+.search-bar input:focus {
+  outline: none;
 }
