--- a/css/common.css
+++ b/css/common.css
@@ -65,8 +65,8 @@ footer {
   padding: 30px;
 }
 
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1024px) {
   body {
     min-width: 1024px;
   }
-}
+} */
